Fixing min hadouken length
Fixing a problem with min hadouken length, that avoid it to be out of the screen length

--- a/Hadouken/style.css
+++ b/Hadouken/style.css
@@ -35,3 +35,9 @@ body{
 	margin-left: -55px;
 
 }
+
+.min-hadouken{
+	vertical-align: top;
+	margin-top: 55px;
+	margin-left: -50px;
+}
